WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167663
WebItemProviderPasteboard should be robust when UIItemProvider fails to initialize an object
https://bugs.webkit.org/show_bug.cgi?id=167663
Summary
WebItemProviderPasteboard should be robust when UIItemProvider fails to initi...
Wenson Hsieh
Reported
2017-01-31 13:55:07 PST
WebItemProviderPasteboard should be robust when UIItemProvider fails to initialize an object
Attachments
Patch
(3.91 KB, patch)
2017-01-31 14:00 PST
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.86 KB, patch)
2017-01-31 14:51 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-01-31 14:00:20 PST
Created
attachment 300256
[details]
Patch
Wenson Hsieh
Comment 2
2017-01-31 14:01:28 PST
<
rdar://problem/30294240
>
Tim Horton
Comment 3
2017-01-31 14:31:36 PST
Comment on
attachment 300256
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=300256&action=review
> Source/WebCore/ChangeLog:9 > + Please see the Radar description for more details, including reproduction steps and analysis of the issue.
I don't think that this is a great thing to write in a changelog.
Wenson Hsieh
Comment 4
2017-01-31 14:51:45 PST
Created
attachment 300265
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2017-01-31 15:29:47 PST
Comment on
attachment 300265
[details]
Patch for landing Clearing flags on attachment: 300265 Committed
r211453
: <
http://trac.webkit.org/changeset/211453
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug