WebItemProviderPasteboard should be robust when UIItemProvider fails to initialize an object https://bugs.webkit.org/show_bug.cgi?id=167663 <rdar://problem/30294240>

Reviewed by Tim Horton.

Adds a nil check for the result of -createObjectOfClass:error:.

* platform/ios/WebItemProviderPasteboard.mm:
(-[WebItemProviderPasteboard valuesForPasteboardType:inItemSet:]):
(-[WebItemProviderPasteboard _tryToCreateAndAppendObjectOfClass:toArray:usingProvider:]):


Canonical link: https://commits.webkit.org/184692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211453 268f45cc-cd09-0410-ab3c-d52691b4dbfc